# muhsic

./: .gitignore  LICENSE  README.md  haskell-music.cabal  muhsic.cabal
app/: Main.hs
doc/: piano_range.tex
examples/: bubble-tea.txt  cave-story-main.txt  hot-milk.txt  megalovania.txt
man/: muhsic.1
src/: Main.hs
src/Muhsic/: Muhsic.hs  Option.hs  Run.hs  Wave.hs
