name:           muhsic
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Luc-Saccoccio/muhsic#README.md>
homepage:       https://github.com/Luc-Saccoccio/muhsic#readme
bug-reports:    https://github.com/Luc-Saccoccio/muhsic/issues
author:         Luc Saccoccio--Le Guennec
maintainer:     lucsaccoccio@disroot.org
copyright:      2021 Luc Saccoccio--Le Guennec
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/Luc-Saccoccio/muhsic

library
  exposed: False
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
      Muhsic
  hs-source-dirs:
      src/Muhsic
  build-depends:
      base >=4.7 && <5
    , bytestring >=0.10 && <0.11
    , process >=1.5 && <=2

executable muhsic
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
      , haskell-music
  default-language: Haskell2010
