name:           muhsic
version:        0.1.0.1
description:    Please see the README on GitHub at <https://github.com/Luc-Saccoccio/muhsic#README.md>
homepage:       https://github.com/Luc-Saccoccio/muhsic#readme
bug-reports:    https://github.com/Luc-Saccoccio/muhsic/issues
author:         Luc Saccoccio--Le Guennec
maintainer:     lucsaccoccio@disroot.org
copyright:      2021 Luc Saccoccio--Le Guennec
license:        MIT
license-file:   LICENSE
build-type:     Simple
data-files:
    doc/muhsic.1
extra-source-files:
    README.md

cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/Luc-Saccoccio/muhsic

library
  ghc-options: -Wall
  exposed-modules:
      Muhsic.Run
  other-modules:
      Muhsic.Option
    , Muhsic.Wave
  build-depends:
      base >=4.7 && <5
    , split
    , bytestring >=0.10 && <0.11
    , process >=1.5 && <=2
    , optparse-applicative
  hs-source-dirs:
    src
  default-language: Haskell2010


executable muhsic
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
      , muhsic
  default-language: Haskell2010
